css/style.css
/* ... */
.final-photo {


    margin-top:80px;


}



.final-photo img {


    width:280px;

    max-width:80%;


    border-radius:30px;


    box-shadow:

    0 0 50px rgba(244,114,182,.5);


}



.final-photo p {


    margin-top:30px;

    font-size:1.2rem;

    font-style:italic;

}

#thankYouButton {

    margin:50px auto 20px;

    display:block;

}

@media (max-width:600px) {

    #constellation {

        display:flex;
        flex-direction:column;
        align-items:center;

    }


    .constellation-stars {

        flex-shrink:0;

        margin-bottom:120px;

    }


    .constellation-list {

        margin-top:60px;

        position:relative;

        z-index:10;

    }


    .constellation-entry {

        position:relative;

        z-index:20;

    }

    #memoriesButton {

        bottom:20px !important;

    }

}

